--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,6 +1,5 @@
 .page {
-    max-width: 1920px;
-    min-width: 320px;
+    width: 1920px;
     margin: 0 auto;
     font-family: "PT Sans", "Arial", sans-serif;
 }
